--- a/FreStyle/src/main/resources/application.properties
+++ b/FreStyle/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=FreStyle
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/springboot_samuraitravel
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/fre_style
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
