--- a/FreStyle/src/main/resources/application.properties
+++ b/FreStyle/src/main/resources/application.properties
@@ -1,7 +1,16 @@
 spring.application.name=FreStyle
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/fre_style
+
+spring.datasource.url=jdbc:mysql://fre-style.ctwsumy6osqz.ap-northeast-1.rds.amazonaws.com:3306/fre_style
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=fre-style-root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.sql.init.encoding=utf-8
+
+# Hibernateがスキーマに干渉しないようにする
+spring.jpa.hibernate.ddl-auto=none
+
+# JDBCのメタデータが取得できないため、HibernateはDialect（データベースの種類）を判別できていない 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+# schema.sql の自動実行（手動作成しているならなしでも良い）
 spring.sql.init.mode=always
+spring.sql.init.encoding=utf-8
