--- a/FreStyle/src/main/resources/application.properties
+++ b/FreStyle/src/main/resources/application.properties
@@ -14,3 +14,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 # schema.sql の自動実行（手動作成しているならなしでも良い）
 spring.sql.init.mode=always
 spring.sql.init.encoding=utf-8
+
+# あとでCognitoで調べて記入する
+cognito.client-id=YOUR_CLIENT_ID
+cognito.client-secret=YOUR_CLIENT_SECRET
+cognito.redirect-uri=http://localhost:5173/login/callback
+cognito.token-uri=https://your-cognito-domain.auth.region.amazoncognito.com/oauth2/token
+
+# Cognitoが提供するJWKセット（公開鍵）URL
+cognito.jwk-set-uri=https://your-cognito-domain.auth.<region>.amazoncognito.com/.well-known/jwks.json
