--- a/FreStyle/src/main/resources/application.properties
+++ b/FreStyle/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=FreStyle
 
-spring.datasource.url=jdbc:mysql://fre-style.ctwsumy6osqz.ap-northeast-1.rds.amazonaws.com:3306/fre_style
+
+spring.datasource.url=jdbc:mysql://localhost:3306/fre_style
 spring.datasource.username=root
-spring.datasource.password=fre-style-root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernateがスキーマに干渉しないようにする
@@ -15,11 +16,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.sql.init.mode=always
 spring.sql.init.encoding=utf-8
 
-# あとでCognitoで調べて記入する
-cognito.client-id=YOUR_CLIENT_ID
-cognito.client-secret=YOUR_CLIENT_SECRET
-cognito.redirect-uri=http://localhost:5173/login/callback
-cognito.token-uri=https://your-cognito-domain.auth.region.amazoncognito.com/oauth2/token
 
-# Cognitoが提供するJWKセット（公開鍵）URL
-cognito.jwk-set-uri=https://your-cognito-domain.auth.<region>.amazoncognito.com/.well-known/jwks.json
+
+aws-access-key=
+aws-secret-key=
+aws.region=
+
