--- a/FreStyle/.gitignore
+++ b/FreStyle/.gitignore
@@ -5,6 +5,11 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### Spring Boot setting file ###
+src/main/resources/application.properties
+
+
+
 ### STS ###
 .apt_generated
 .classpath
