--- a/FreStyle/Dockerfile
+++ b/FreStyle/Dockerfile
@@ -5,6 +5,6 @@ RUN  chmod +x ./gradlew
 RUN ./gradlew build -x test
 
 
-FROM openjdk:17 AS production
+FROM eclipse-temurin:21-jdk AS production
 COPY --from=build /app/build/libs/FreStyle-0.0.1-SNAPSHOT.jar ./FreStyle.jar
 CMD [ "java", "-jar", "FreStyle.jar" ]
