--- a/FreStyle/src/main/resources/application.properties
+++ b/FreStyle/src/main/resources/application.properties
@@ -38,5 +38,5 @@ aws.region=${AWS_REGION}
 aws.dynamodb.table-name.ai-chat=fre_style_ai_chat
 aws.dynamodb.table-name.chat=fre_style_chat
 
-# logging.level.org.springframework.security=DEBUG
-# logging.level.org.springframework.security.oauth2=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.oauth2=DEBUG
