--- a/FreStyle/src/main/resources/application.properties
+++ b/FreStyle/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=FreStyle
 
 # 本番用
-spring.datasource.url=${DB_URL}?useUnicode=true&characterEncoding=utf8mb4&serverTimezone=Asia/Tokyo
+spring.datasource.url=${DB_URL}?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Tokyo
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 
