--- a/FreStyle/src/main/resources/application.properties
+++ b/FreStyle/src/main/resources/application.properties
@@ -16,7 +16,8 @@ spring.jpa.hibernate.ddl-auto=none
 # samesiteでHttpOnly Cookieの設定をするStrict/LaxだとHttpsでしかリクエストが遅れない可能性があるのでNoneに設定をする
 server.servlet.session.cookie.same-site=Lax
 
-
+# ロードバランサー経由でクライアント側が正しくHTTPSを送っているか確かめる
+server.forward-headers-strategy=native
 
 # JDBCのメタデータが取得できないため、HibernateはDialect（データベースの種類）を判別できていない 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
