--- a/FreStyle/src/main/resources/application.properties
+++ b/FreStyle/src/main/resources/application.properties
@@ -15,9 +15,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 # samesiteでHttpOnly Cookieの設定をするStrict/LaxだとHttpsでしかリクエストが遅れない可能性があるのでNoneに設定をする
 server.servlet.session.cookie.same-site=Lax
+# ALBからのx-forwarded-protoヘッダーでHttps化を確認する
+server.forwarded-headers-strategy=FRAMEWORK
 
-# ロードバランサー経由でクライアント側が正しくHTTPSを送っているか確かめる
-server.forward-headers-strategy=native
 
 # JDBCのメタデータが取得できないため、HibernateはDialect（データベースの種類）を判別できていない 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
