--- a/FreStyle/src/main/resources/application.properties
+++ b/FreStyle/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Hibernateがスキーマに干渉しないようにする
 spring.jpa.hibernate.ddl-auto=none
 # samesiteでHttpOnly Cookieの設定をするStrict/LaxだとHttpsでしかリクエストが遅れない可能性があるのでNoneに設定をする
-server.servlet.session.cookie.same-site=Lax
+server.servlet.session.cookie.same-site=None
 # ALBからのx-forwarded-protoヘッダーでHttps化を確認する
 server.forwarded-headers-strategy=FRAMEWORK
 
