--- a/.github/workflows/back-deploy.yml
+++ b/.github/workflows/back-deploy.yml
@@ -22,31 +22,43 @@ jobs:
     timeout-minutes: 10
     defaults:
       run:
-        working-directory: FreStyle
+        working-directory: FreStyle # このディレクトリ設定は正しいです
     steps:
-      # このステップでGitHubのリポジトリをアクションの実行環境でコピーする
+      # 1. コードのチェックアウト (変更なし)
       - uses: actions/checkout@v4
-      
-      - name: Build an Image and Run Tests
-      # dockerイメージのビルドコマンドを打つ
+
+      # 2. 【追加】JDKのセットアップ (テスト実行に必要)
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: 'gradle'
+
+      # 3. 【追加】Spring Bootのテストを実行
+      - name: Run Spring Boot tests
+        run: ./gradlew test
+
+      # 4. Dockerイメージのビルド (テストが成功した場合のみ実行される)
+      - name: Build an Image
         run: |
           docker image build --target production -t temp_api_image_name:latest .
-      # AWSの認証情報（IAMユーザーで作成したアクセスキー、シークレットアクセスキー）を設定をしている
+          
+      # 5. AWS認証
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID}}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY_ID }}
           aws-region: ${{ env.AWS_REGION }}
           
-      # ECRレジストリ、リポジトリの情報を取得する
-      # さっきのid値を設定したが各ジョブは違う環境にあるのでまた同じ設定をし直す必要がある
+      # 6. ECRログイン
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
         
-      # さっきのログインしたECRリポジトリの中にイメージをプッシュする
-      - name: Push the image mto Amazon ECR
+      # 7. ECRへプッシュ
+      - name: Push the image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY:  ${{ secrets.AWS_ECR_API_SERVER_REPOSITORY }}
