--- a/.github/workflows/back-deploy.yml
+++ b/.github/workflows/back-deploy.yml
@@ -35,9 +35,11 @@ jobs:
           distribution: 'temurin'
           cache: 'gradle'
 
-      # 3. 【追加】Spring Bootのテストを実行
-      - name: Run Spring Boot tests
-        run: ./gradlew test
+      # # 3. 【追加】Spring Bootのテストを実行
+      # - name: Run Spring Boot tests
+      #   run: |
+      #     chmod +x ./gradlew
+      #     ./gradlew test
 
       # 4. Dockerイメージのビルド (テストが成功した場合のみ実行される)
       - name: Build an Image
@@ -49,7 +51,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID}}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
           
       # 6. ECRログイン
