--- a/FreStyle/.gitignore
+++ b/FreStyle/.gitignore
@@ -6,7 +6,7 @@ build/
 !**/src/test/**/build/
 
 ### Spring Boot setting file ###
-# src/main/resources/application.properties
+src/main/resources/application.properties
 
 
 
