ユーザーのパーソナリティー機能が追加できるようにしたその情報をもとにAIからのフィードバックを得られることができる

--- a/FreStyle/.gitignore
+++ b/FreStyle/.gitignore
@@ -6,7 +6,8 @@ build/
 !**/src/test/**/build/
 
 ### Spring Boot setting file ###
-src/main/resources/application.properties
+./src/main/resources/application-*.yml
+./src/main/resources/application-*.properties
 
 
 
