BedRockと通信するためのビジネスロジックの修正＆AIに渡すための情報数の調整機能を追加した

--- a/FreStyle/build.gradle
+++ b/FreStyle/build.gradle
@@ -67,7 +67,10 @@ dependencies {
 	
 	// Cognito
 	implementation 'software.amazon.awssdk:cognitoidentityprovider'
-  implementation 'software.amazon.awssdk:auth'
+	implementation 'software.amazon.awssdk:auth'
+	
+	// Bedrock (AIチャット用)
+	implementation 'software.amazon.awssdk:bedrockruntime'
 	
 	// Httpクライアント
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
