バックエンド側でログを出してフィルターまで通っているのかの確認をする

--- a/FreStyle/src/main/resources/application.properties
+++ b/FreStyle/src/main/resources/application.properties
@@ -39,7 +39,14 @@ aws.region=${AWS_REGION}
 aws.dynamodb.table-name.ai-chat=fre_style_ai_chat
 aws.dynamodb.table-name.chat=fre_style_chat
 
-
+# ========== ロギング設定 ==========
+# Spring Security
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.security.oauth2=DEBUG
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
+# CORS関連のログ
+logging.level.org.springframework.web.cors=DEBUG
+logging.level.org.springframework.web.filter.CorsFilter=DEBUG
+logging.level.com.example.FreStyle.config.CorsConfig=INFO
+logging.level.com.example.FreStyle.config.CorsLoggingFilter=INFO
