--- a/FreStyle/src/main/resources/application.properties
+++ b/FreStyle/src/main/resources/application.properties
@@ -50,3 +50,13 @@ logging.level.org.springframework.web.cors=DEBUG
 logging.level.org.springframework.web.filter.CorsFilter=DEBUG
 logging.level.com.example.FreStyle.config.CorsConfig=INFO
 logging.level.com.example.FreStyle.config.CorsLoggingFilter=INFO
+
+
+# Actuatorのエンドポイントを全て有効化（本番では不要なものは制限推奨）
+management.endpoints.web.exposure.include=health,info
+
+# Health check の詳細レスポンスを非表示（本番向け）
+management.endpoint.health.show-details=never
+
+# ポートをSpring Bootと同じにする場合はコメントアウト
+# management.server.port=8080
